# RAG-Legal-Bot

./: .gitignore  CHANGELOG.md  README.md  legal_agent.py  pipeline_steps.md  pyproject.toml  requirements.txt  setup_db.py
backend/: main.py  package.json  server.js
docs/: ENTERPRISE_COMPARISON.md  IMPLEMENTATION.md  RAG_WORKFLOW.md
frontend/: index.html
scripts/: check_metadata_counts.py  check_metadata_ids.py  debug_chunks.py  test_agent.py
src/: __init__.py
src/chunking/: __init__.py  metadata_builder.py  semantic_chunker.py
src/evaluation/: __init__.py  llm_evaluator.py
src/generation/: __init__.py
src/query/: __init__.py  crag_evaluator.py  multi_hop_retriever.py  query_expander.py  query_router.py
src/retrieval/: __init__.py  bm25_indexer.py  cross_encoder_reranker.py  dense_retriever.py  rrf_fusion.py
tests/: benchmark.py  golden_questions.json
